# colorbot-workshop

./: .dockerignore  .gitignore  Dockerfile  README.md  capex-workshop.ipynb  docker-compose.yml  pump_calibration_template_2.xlsx  pyproject.toml
config_files/: config.json
notebooks/: 00_Python_Intro.ipynb  01_Calibrate_your_pumpbots.ipynb  02_Color_Mixing_and_Optimization_InSilico.ipynb  03_Color_Mixing_and_Optimization_PumpBot.ipynb  04_Bayesian_Optimization_Tutorial.ipynb  05_Bayesian_Optimization_Odyssey_InSilico.ipynb  05_Bayesian_Optimization_Odyssey_InSilico_all.ipynb  06_Bayesian_Optimization_Odyssey_PumpBot.ipynb  07_Multi-Objective_BO_Odyssey_InSilico.ipynb  08_Multi-Objective_BO_Odyssey_PumpBot.ipynb  09_Error_Correcting_NN_InSilico_PumpBot_combination.ipynb  09_InSilico_Neural_Network_exercise.ipynb  error_correction_notebook_2024.ipynb
pump_controller/: __init__.py  colors_help.py  mqtt_utils.py  pump_controller.py  serial_help.py  silico_pump_controller.py  utils.py
