[tool.poetry]
name = "ai-orchestrated-sdl"
version = "1.0.0"
description = ""
authors =   ["Andreas Tuxen", "Jin Hyun Chang"]
license = "MPL-2.0"
packages = [{ include = "pump_controller" }]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11"
pyserial = "^3.5"
numpy = ">=1.26,<2.0.0"
pandas = ">=2.2.0,<3.0.0"
matplotlib = ">=3.9.0,<4.0.0"
scipy = ">=1.13.0,<2.0.0"
botorch = ">=0.15.0"
torch = ">=2.2.0"
ipython = "*"
paho-mqtt = "^2.1.0"
odyssey = { git = "https://gitlab.com/auto_lab/odyssey.git", rev = "a9aed88" }
typeguard = ">=4.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
  

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


